added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      name="description"
+      content="Kevin Samson's personal website. A place to showcase my projects and skills."
+    />
+    <meta
+      name="keywords"
+      content="Kevin Samson, Kevin, Samson, Kevin Samson's personal website, personal website, personal, website, Kevin Samson's website, Kevin Samson's personal, Kevin"
+    />
+    <meta name="author" content="Kevin Samson" />
+    <meta name="robots" content="index, follow" />
+    <meta name="og:title" content="Kevin Samson" />
+    <meta
+      name="og:description"
+      content="Kevin Samson's personal website. A place to showcase my projects and skills."
+    />
+    <meta
+      name="og:image"
+      content="https://portfolio-kevin-samson.vercel.app/assets/profile-image-da3ff140.jpg"
+    />
+    <meta name="og:url" content="https://portfolio-kevin-samson.vercel.app/" />
+
+    <title>Kevin Samson</title>
   </head>
   <body>
     <div id="root"></div>
