--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
       name="og:description"
       content="Kevin Samson's personal website. A place to showcase my projects and skills."
     />
-    <meta
-      name="og:image"
-      content="https://portfolio-kevin-samson.vercel.app/assets/profile-image-da3ff140.jpg"
-    />
+    <meta name="og:image" content="/profile-image.jpg" />
     <meta name="og:url" content="https://portfolio-kevin-samson.vercel.app/" />
 
     <title>Kevin Samson</title>
